fixed icons not showing

--- a/css/application.css
+++ b/css/application.css
@@ -374,8 +374,8 @@ template {
 
 @font-face {
   font-family: 'icomoon';
-  src: url('"../../fonts"/icomoon.eot?h4tyft');
-  src: url('"../../fonts"/icomoon.eot?h4tyft#iefix') format("embedded-opentype"), url('"../../fonts"/icomoon.ttf?h4tyft') format("truetype"), url('"../../fonts"/icomoon.woff?h4tyft') format("woff"), url('"../../fonts"/icomoon.svg?h4tyft#icomoon') format("svg");
+  src: url("../fonts/icomoon.eot?h4tyft");
+  src: url("../fonts/icomoon.eot?h4tyft#iefix") format("embedded-opentype"), url("../fonts/icomoon.ttf?h4tyft") format("truetype"), url("../fonts/icomoon.woff?h4tyft") format("woff"), url("../fonts/icomoon.svg?h4tyft#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -390,6 +390,7 @@ template {
 /* line 21, ../../Documents/NetmattersProjects/Netmatters/scss/base/_fonts.scss */
 [class^="icon-"] {
   font-family: 'icomoon' !important;
+  font-size: 2em;
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
@@ -472,89 +473,111 @@ footer a:hover {
   text-decoration: underline;
 }
 
-/* line 27, ../../Documents/NetmattersProjects/Netmatters/scss/content/_footer.scss */
-footer .icon-fb::before {
-  content: "\ea90";
+/* line 24, ../../Documents/NetmattersProjects/Netmatters/scss/content/_footer.scss */
+footer .footer-socials {
+  margin-bottom: 30px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 /* line 30, ../../Documents/NetmattersProjects/Netmatters/scss/content/_footer.scss */
-footer .icon-li::before {
+footer .footer-socials a {
+  background-color: #212330;
+}
+
+/* line 32, ../../Documents/NetmattersProjects/Netmatters/scss/content/_footer.scss */
+footer .footer-socials a:hover {
+  background-color: #0077B5;
+}
+
+/* line 40, ../../Documents/NetmattersProjects/Netmatters/scss/content/_footer.scss */
+footer .footer-socials .icon {
+  flex: 1 calc(50% - 10px);
+}
+
+/* line 42, ../../Documents/NetmattersProjects/Netmatters/scss/content/_footer.scss */
+footer .footer-socials .icon-fb::before {
+  content: "\ea90";
+}
+
+/* line 45, ../../Documents/NetmattersProjects/Netmatters/scss/content/_footer.scss */
+footer .footer-socials .icon-li::before {
   content: "\eaca";
 }
 
-/* line 33, ../../Documents/NetmattersProjects/Netmatters/scss/content/_footer.scss */
-footer .icon-x::before {
+/* line 48, ../../Documents/NetmattersProjects/Netmatters/scss/content/_footer.scss */
+footer .footer-socials .icon-x::before {
   content: "\e900";
 }
 
-/* line 36, ../../Documents/NetmattersProjects/Netmatters/scss/content/_footer.scss */
-footer .icon-in::before {
+/* line 51, ../../Documents/NetmattersProjects/Netmatters/scss/content/_footer.scss */
+footer .footer-socials .icon-in::before {
   content: "\ea92";
 }
 
-/* line 43, ../../Documents/NetmattersProjects/Netmatters/scss/content/_footer.scss */
+/* line 58, ../../Documents/NetmattersProjects/Netmatters/scss/content/_footer.scss */
 footer .footer-row {
   display: flex;
   flex-wrap: wrap;
 }
 
-/* line 47, ../../Documents/NetmattersProjects/Netmatters/scss/content/_footer.scss */
+/* line 62, ../../Documents/NetmattersProjects/Netmatters/scss/content/_footer.scss */
 footer .footer-row .footer-menu {
   flex: 100%;
   margin-bottom: 30px;
 }
 
 @media (min-width: 768px) {
-  /* line 47, ../../Documents/NetmattersProjects/Netmatters/scss/content/_footer.scss */
+  /* line 62, ../../Documents/NetmattersProjects/Netmatters/scss/content/_footer.scss */
   footer .footer-row .footer-menu {
     flex: 50%;
   }
 }
 
 @media (min-width: 992px) {
-  /* line 47, ../../Documents/NetmattersProjects/Netmatters/scss/content/_footer.scss */
+  /* line 62, ../../Documents/NetmattersProjects/Netmatters/scss/content/_footer.scss */
   footer .footer-row .footer-menu {
     flex: 25%;
   }
 }
 
 @media (min-width: 1260px) {
-  /* line 47, ../../Documents/NetmattersProjects/Netmatters/scss/content/_footer.scss */
+  /* line 62, ../../Documents/NetmattersProjects/Netmatters/scss/content/_footer.scss */
   footer .footer-row .footer-menu {
     margin-bottom: 40px;
   }
 }
 
-/* line 64, ../../Documents/NetmattersProjects/Netmatters/scss/content/_footer.scss */
+/* line 79, ../../Documents/NetmattersProjects/Netmatters/scss/content/_footer.scss */
 footer .footer-row .footer-menu ul {
   list-style-type: none;
   padding: 0px;
   margin: 0px;
 }
 
-/* line 68, ../../Documents/NetmattersProjects/Netmatters/scss/content/_footer.scss */
+/* line 83, ../../Documents/NetmattersProjects/Netmatters/scss/content/_footer.scss */
 footer .footer-row .footer-menu ul li {
   line-height: 1.375rem;
 }
 
-/* line 74, ../../Documents/NetmattersProjects/Netmatters/scss/content/_footer.scss */
+/* line 89, ../../Documents/NetmattersProjects/Netmatters/scss/content/_footer.scss */
 footer .footer-bottom {
   background-color: #212330;
   padding-top: 15px;
   padding-bottom: 15px;
 }
 
-/* line 79, ../../Documents/NetmattersProjects/Netmatters/scss/content/_footer.scss */
+/* line 94, ../../Documents/NetmattersProjects/Netmatters/scss/content/_footer.scss */
 footer .footer-bottom div div {
   padding-bottom: 2px;
 }
 
 @media (min-width: 768px) {
-  /* line 79, ../../Documents/NetmattersProjects/Netmatters/scss/content/_footer.scss */
+  /* line 94, ../../Documents/NetmattersProjects/Netmatters/scss/content/_footer.scss */
   footer .footer-bottom div div {
     display: inline-block;
   }
-  /* line 85, ../../Documents/NetmattersProjects/Netmatters/scss/content/_footer.scss */
+  /* line 100, ../../Documents/NetmattersProjects/Netmatters/scss/content/_footer.scss */
   footer .footer-bottom div div a::before {
     content: '- ';
   }
