--- a/scss/base/_fonts.scss
+++ b/scss/base/_fonts.scss
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @font-face {
     font-family: 'icomoon';
-    src:    url('#{$icofnt}.eot?h4tyft');
-    src:    url('#{$icofnt}.eot?h4tyft#iefix') format('embedded-opentype'),
-            url('#{$icofnt}.ttf?h4tyft') format('truetype'),
-            url('#{$icofnt}.woff?h4tyft') format('woff'),
-            url('#{$icofnt}.svg?h4tyft#icomoon') format('svg');
+    src:    url('#{$icofnt}.eot#{$icofntsuffix}');
+    src:    url('#{$icofnt}.eot#{$icofntsuffix}#iefix') format('embedded-opentype'),
+            url('#{$icofnt}.ttf#{$icofntsuffix}') format('truetype'),
+            url('#{$icofnt}.woff#{$icofntsuffix}') format('woff'),
+            url('#{$icofnt}.svg#{$icofntsuffix}#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
     font-display: block;
@@ -20,6 +20,7 @@
 
 [class^="icon-"]{
     font-family: 'icomoon' !important;
+    font-size:  2em;
     font-style: normal;
     font-weight: normal;
     font-variant: normal;
